bk_ida/gobmkida/c1/initialize_dragon_data
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/initialize_dragon_data/src/engine/dragon.c:1176:6: error: use of undeclared identifier 'xmmword_4888A0'
v2 = xmmword_4888A0; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/initialize_dragon_data/src/engine/dragon.c:1177:6: error: use of undeclared identifier 'xmmword_4888B0'
v3 = xmmword_4888B0; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/initialize_dragon_data/src/engine/dragon.c:1190:12: error: expected expression
*( _OWORD *)( v4 + 10321944) = v2; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/initialize_dragon_data/src/engine/dragon.c:1190:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v4 + 10321944) = v2; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/initialize_dragon_data/src/engine/dragon.c:1192:12: error: expected expression
*( _OWORD *)( v4 + 10321960) = v3; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/initialize_dragon_data/src/engine/dragon.c:1192:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v4 + 10321960) = v3; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/initialize_dragon_data/src/engine/dragon.c:1199:6: error: use of undeclared identifier 'xmmword_4888B0'
v3 = xmmword_4888B0; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/initialize_dragon_data/src/engine/dragon.c:1200:6: error: use of undeclared identifier 'xmmword_4888A0'
v2 = xmmword_4888A0; 
     ^
8 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/initialize_dragon_data/src/obj/1/dragon.o] Error 1
